--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 				<div class="container">
 				<div class="topnav">
-						<a class="active" href=>Home</a>
-						<a href=>About</a>
-						<a href=>Made</a>
-						<a href=>Contact</a>
+						<a class="active" href="index.html">Home</a>
+						<a href= "about.html">About</a>
+						<a href= "outdex.html">Made</a>
+						<a href= "#">Contact</a>
 				</div>
 				</div>
 
