--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,24 @@
 	<html>
 		<head>
 			<title>contact</title>
+			<link rel="stylesheet" type="text/css" href="css/style.css">
+			<meta charset="utf-8">
+			<meta name="viewport" content="width = device-width, initial-scale=1.0">
 		</head>
 			<body>
+
+				<div class="container">
+				<div class="topnav">
+						<a href="index.html">Home</a>
+						<a href= "about.html">About</a>
+						<a href= "made.html">Made</a>
+						<a class="active" href= "contact.html">Contact</a>
+				</div>
+				</div>
+
+				<p>
+					Nonya
+				</p>
 
 			</body>
 	</html>
