--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 						<a href="index.html">Home</a>
 						<a class="active" href= "about.html">About</a>
 						<a href= "made.html">Made</a>
-						<a href= "#">Contact</a>
+						<a href= "contact.html">Contact</a>
 				</div>
 				</div>
 
@@ -23,7 +23,9 @@
 					Ik ben Jason, ik ben een 17 jarige jongen. In mijn vrije tijd 
 					speel en maak ik het liefst muziek, ik speel acoustische gitaar, elektrische gitaar en klassiek acoustische gitaar, en momenteel probeer ik keyboard te leren. Daarnaast vind ik het ook leuk om te leren programmeren en momenteel ben ik de talen JavaScript en PHP aan het leren en heb ik HTML en CSS wel redelijk onder de knie. <br>
 
-					Naast school ga ik ook nog wekelijks naar het lisk centre waar ik leer over JavaScript en Blockchain, daarnaast heb ik mij ook nog aangesloten bij een Waterstof project van de school om afstands bestuurbare waterstof gedreven auto te bouwen die vervolgens in een race zullen toenemen, binnen dit project zorg ik voor onderhoud van de facebook pagina en het creeren van een website voor hun.
+					Naast school ga ik ook nog wekelijks naar het lisk centre waar ik leer over JavaScript en Blockchain, daarnaast heb ik mij ook nog aangesloten bij een Waterstof project van de school om afstands bestuurbare waterstof gedreven auto te bouwen die vervolgens in een race zullen toenemen, binnen dit project zorg ik voor onderhoud van de facebook pagina en het creeren van een website voor hun. <br>
+
+					Het liefst werk ik in een gezellige maar rustige werkomgeving met een redelijk klein team, het liefst werk ik zelfstandig. Mijn min punten zijn dat ik niet een gigantisch snelle werker ben en ik heb moeite met deadlines maken. Mijn pluspunten zij dat ik een rustig persoon ben en dat ik gericht en geconcentreerd kan werken en zo nodig zal ik zoveel extra werken als nodig is en meer.
 				</p>
 
 			</body>
