--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<div class="topnav">
 						<a class="active" href="index.html">Home</a>
 						<a href= "about.html">About</a>
-						<a href= "outdex.html">Made</a>
-						<a href= "#">Contact</a>
+						<a href= "made.html">Made</a>
+						<a href= "contact.html">Contact</a>
 				</div>
 				</div>
 
