--- a/made.html
+++ b/made.html
@@ -13,7 +13,7 @@
 						<a href="index.html">Home</a>
 						<a href= "about.html">About</a>
 						<a class="active" href= "made.html">Made</a>
-						<a href= "#">Contact</a>
+						<a href= "contact.html">Contact</a>
 				</div>
 				</div>
 
