--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,12 @@
 		</head>
 			<body>
 
+				<header id="main-header">
+					<div class="container">
+						<h1>Jason Bozoki's first website</h1>
+					</div>
+				</header>
+
 				<div class="container">
 				<div class="topnav">
 						<a href= "index.html">Home</a>
