--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 			<header id="main-header">
 				<div class="container">
-					<h1>Website one</h1>
+					<h1>Jason Bozoki's first website</h1>
 				</div>
 			</header>
 
