--- a/about.html
+++ b/about.html
@@ -25,6 +25,8 @@
 
 				<img src="images/mediator.jpg">
 
+				<section id="main">
+
 				<h2>over mij</h2>
 
 				<p>
@@ -48,6 +50,8 @@
 						ik spreek Engels en Nederlands, een heel klein beetje Duits en ik ben momenteel Spaans aan het leren. De programmeer talen die ik ken zijn HTML en CSS, en ik ben momenteel JavaScript en PHP aan het leren.
 					</p>
 				</p>
+
+			</section>
 
 			</body>
 	</html>
