--- a/made.html
+++ b/made.html
@@ -23,7 +23,11 @@
 				</div>
 				</div>
 
-				<a class="made" href="outdex.html">this site is currently in progress</a>
+				<section id="main">
+					<a class="made" href="outdex.html">this site is currently in progress</a>
+				</section>
+
+				
 
 			</body>
 	</html>
