--- a/made.html
+++ b/made.html
@@ -24,7 +24,9 @@
 				</div>
 
 				<section id="main">
-					<a class="made" href="outdex.html">this site is currently in progress</a>
+					<a class="made" href="outdex.html">this site is currently in progress
+						<img src="images/j-bozz.jpg">
+					</a>
 				</section>
 
 				
