--- a/made.html
+++ b/made.html
@@ -25,7 +25,7 @@
 
 				<section id="main">
 					<a class="made" href="outdex.html">this site is currently in progress
-						<img src="images/j-bozz.jpg">
+						<img src="j-bozz.jpg">
 					</a>
 				</section>
 
