--- a/made.html
+++ b/made.html
@@ -24,8 +24,8 @@
 				</div>
 
 				<section id="main">
-					<a class="made" href="outdex.html">this site is currently in progress
-						<img src="j-bozz.jpg">
+					<a class="made" href="outdex.html">this site is currently in progress <br>
+						<img src="j-bozz.jpg"><br>
 					</a>
 				</section>
 
