--- a/outdex.html
+++ b/outdex.html
@@ -222,7 +222,7 @@
 							<div id="social-media-footer">
 								<ul>
 									<li>
-										<a href="#">
+										<a href="https://www.facebook.com/H2-Techcampus-112201946928152/?modal=admin_todo_tour">
 											<i class="fab fa-facebook"></i>
 										</a>
 									</li>
