--- a/outdex.html
+++ b/outdex.html
@@ -222,7 +222,10 @@
 							<div id="social-media-footer">
 								<ul>
 									<li>
-										<a href="https://www.facebook.com/waterstof.techcampus.7">
+										<!--<a href="https://www.facebook.com/waterstof.techcampus.7">
+											<i class="fab fa-facebook"></i>
+										</a>-->
+										<a href="fb.me/H2TechCampus">
 											<i class="fab fa-facebook"></i>
 										</a>
 									</li>
