--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,13 @@
 
 				<section id="main">
 
-				<p>
-					Nonya
-				</p>
+				<ul>
+					<li>
+						<a href="#">
+						<i class="fab fa-github"></i>
+						</a>
+					</li>
+				</ul>
 
 				</section>
 
