--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width = device-width, initial-scale=1.0">
+			<script src="https://kit.fontawesome.com/bbf473e5df.js" crossorigin="anonymous"></script>
 		</head>
 			<body>
 
