--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width = device-width, initial-scale=1.0">
-			<script src="https://kit.fontawesome.com/bbf473e5df.js" crossorigin="anonymous"></script>
+			<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 		</head>
 			<body>
 
@@ -35,6 +35,9 @@
 				</ul>
 
 				</section>
+				
+				
+				<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="jason-bozoki-19836b19a"><a class="LI-simple-link" href='https://nl.linkedin.com/in/jason-bozoki-19836b19a?trk=profile-badge'>Jason Bozoki</a></div>
 
 			</body>
 	</html>
