--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,10 @@
 				</section>
 				
 				
-				<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="jason-bozoki-19836b19a"><a class="LI-simple-link" href='https://nl.linkedin.com/in/jason-bozoki-19836b19a?trk=profile-badge'>Jason Bozoki</a></div>
+				<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="jason-bozoki-19836b19a">
+					<a class="LI-simple-link" href='https://nl.linkedin.com/in/jason-bozoki-19836b19a?trk=profile-badge'>Jason Bozoki</a>
+					<a href = 'https://www.linkedin.com/in/jason-bozoki-19836b19a/'></a>
+				</div>
 
 			</body>
 	</html>
