--- a/agenda.html
+++ b/agenda.html
@@ -21,7 +21,7 @@
           <a href="sterren.html">Home</a>
           <a href="meteoren.html">Meteoren</a>
           <a class="active" href="agenda.html">Agenda</a>
-          <a href="contact.html">Contact</a>
+          <a href="kontakt.html">Contact</a>
         </div>
 
         <h1 class="d">Agenda voor dit rest van 2019</h1>
