--- a/meteoren.html
+++ b/meteoren.html
@@ -22,7 +22,7 @@
           <a href="sterren.html">Home</a>
           <a class="active" href="meteoren.html">Meteoren</a>
           <a href="agenda.html">Agenda</a>
-          <a href="contact.html">Contact</a>
+          <a href="kontakt.html">Contact</a>
         </div>
 
         <h2>Orioniden</h2>
