--- a/sterren.html
+++ b/sterren.html
@@ -21,7 +21,7 @@
           <a class="active" href="sterren.html">Home</a>
           <a href="meteoren.html">Meteoren</a>
           <a href="agenda.html">Agenda</a>
-          <a href="contact.html">Contact</a>
+          <a href="kontakt.html">Contact</a>
         </div>
 
         <h1>Sterren kijker</h1> <!-- Website logo large -->
