--- a/outdex.html
+++ b/outdex.html
@@ -4,7 +4,7 @@
 			<head>
 				<title>hydrogen race team</title>
 				<meta charset="utf-8">
-				<meta name="viewport" content="width=device-width, inital-scale=1.0">
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<meta http-equiv="X-UA-Compatible" content="ie=edge">
 				<link rel="stylesheet" type="text/css" href="steep.css">
 				<script src="https://kit.fontawesome.com/bbf473e5df.js" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
 							<a href="#">Blog</a>
 						</li>
 						<li>
-							<a href="index.html">Projects</a>
+							<a href="projects.html">Projects</a>
 						</li>
 						<li>
 							<a href="#">About</a>
@@ -53,7 +53,7 @@
 							<a href="#">Blog</a>
 						</li>
 						<li>
-							<a href="index.html">Projects</a>
+							<a href="projects.html">Projects</a>
 						</li>
 						<li>
 							<a href="#">About</a>
