--- a/sterren.html
+++ b/sterren.html
@@ -22,6 +22,7 @@
           <a href="meteoren.html">Meteoren</a>
           <a href="agenda.html">Agenda</a>
           <a href="kontakt.html">Contact</a>
+          <a href="projekts.html">Projecten</a>
         </div>
 
         <h1>Sterren kijker</h1> <!-- Website logo large -->
