--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,15 @@
 
 				<main>
 					<a href="#">
-						<h2 class="section-heading">All Blogs</h2>
+						<h2 class="section-heading">All Projects</h2>
 					</a>
+
+					        <div>
+          						<a href="index.html">Portfolio home page</a>
+        					</div>
+
+        					<div>
+          						<a href="outdex.html"> Project in works</a>
+        					</div>
 		</body>
 	</html>
