--- a/projects.html
+++ b/projects.html
@@ -47,13 +47,13 @@
 					</div>
 					<ul>
 						<li>
-							<a class="active" href="#">Home</a>
+							<a href="#">Home</a>
 						</li>
 						<li>
 							<a href="#">Blog</a>
 						</li>
 						<li>
-							<a href="projects.html">Projects</a>
+							<a class="active"  href="projects.html">Projects</a>
 						</li>
 						<li>
 							<a href="#">About</a>
