--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
         					</div>
 
         					<div>
-          						<a href="outdex.html"> Project in works</a>
+          						<a href="index.html"> star project</a>
         					</div>
 		</body>
 	</html>
