--- a/kontakt.html
+++ b/kontakt.html
@@ -22,6 +22,7 @@
           <a href="meteoren.html">Meteoren</a>
           <a href="agenda.html">Agenda</a>
           <a class="active" href="kontakt.html">Contact</a>
+          <a href="projekts.html">Projecten</a>
         </div>
 
         <h2>Contact gegevens</h2>
