--- a/meteoren.html
+++ b/meteoren.html
@@ -23,6 +23,7 @@
           <a class="active" href="meteoren.html">Meteoren</a>
           <a href="agenda.html">Agenda</a>
           <a href="kontakt.html">Contact</a>
+          <a href="projekts.html">Projecten</a>
         </div>
 
         <h2>Orioniden</h2>
