--- a/sterren.html
+++ b/sterren.html
@@ -49,7 +49,8 @@
         <p>
         	<a href="meteoren.html">Meteoren </a> </br>
         	<a href="agenda.html">Agenda </a> </br>
-        	<a href="contact.html">Contact</a>
+        	<a href="contact.html">Contact</a> </br>
+          <a href="projekts.html"> Projecten </a> </br>
         </p>
 
         <div>
