--- a/agenda.html
+++ b/agenda.html
@@ -22,6 +22,7 @@
           <a href="meteoren.html">Meteoren</a>
           <a class="active" href="agenda.html">Agenda</a>
           <a href="kontakt.html">Contact</a>
+          <a href="projekts.html">Projecten</a>
         </div>
 
         <h1 class="d">Agenda voor dit rest van 2019</h1>
