--- a/projekts.html
+++ b/projekts.html
@@ -18,11 +18,11 @@
 
       	<div class="topnav"> <!-- TopNav bar-->
       	  <!--<img class="b" src="logo.jpg">-->
-          <a class="active" href="sterren.html">Home</a>
+          <a href="sterren.html">Home</a>
           <a href="meteoren.html">Meteoren</a>
           <a href="agenda.html">Agenda</a>
           <a href="kontakt.html">Contact</a>
-          <a href="projekts.html">Projecten</a>
+          <a class="active" href="projekts.html">Projecten</a>
         </div>
 
         <h1>Projecten</h1>
