--- a/about.html
+++ b/about.html
@@ -2,56 +2,24 @@
 	<html>
 		<head>
 			<title>about</title>
-			<link rel="stylesheet" type="text/css" href="css/style.css">
+			<link rel="stylesheet" type="text/css" href="style.css">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width = device-width, initial-scale=1.0">
 		</head>
 			<body>
 
-				<header id="main-header">
-					<div class="container">
-						<h1>Jason Bozoki's first website</h1>
-					</div>
-				</header>
 
 				<div class="container">
 				<div class="topnav">
 						<a href="index.html">Home</a>
 						<a class="active" href= "about.html">About</a>
-						<a href= "made.html">Made</a>
-						<a href= "contact.html">Contact</a>
+						<a href= "outdex.html">Made</a>
+						<a href= "#">Contact</a>
 				</div>
 				</div>
 
-				<img src="images/mediator.jpg">
-
-				<section id="main">
-
-				<h2>over mij</h2>
-
-				<p>
-					Ik ben Jason, ik ben een 17 jarige jongen. In mijn vrije tijd 
-					speel en maak ik het liefst muziek, ik speel acoustische gitaar, elektrische gitaar en klassiek acoustische gitaar, en momenteel probeer ik keyboard te leren. Daarnaast vind ik het ook leuk om te leren programmeren en momenteel ben ik de talen JavaScript en PHP aan het leren en heb ik HTML en CSS wel redelijk onder de knie. <br>
-
-					Naast school ga ik ook nog wekelijks naar het lisk centre waar ik leer over JavaScript en Blockchain, daarnaast heb ik mij ook nog aangesloten bij een Waterstof project van de school om afstands bestuurbare waterstof gedreven auto te bouwen die vervolgens in een race zullen toenemen, binnen dit project zorg ik voor onderhoud van de facebook pagina en het creeren van een website voor hun. <br>
-
-				</p>
-
-					<h2>werkomgeving, min en plus punten</h2>
-
-						<p>
-
-					Het liefst werk ik in een gezellige maar rustige werkomgeving met een redelijk klein team, het liefst werk ik zelfstandig. Mijn min punten zijn dat ik niet een gigantisch snelle werker ben en ik heb moeite met deadlines maken. Mijn pluspunten zij dat ik een rustig persoon ben en dat ik gericht en geconcentreerd kan werken en zo nodig zal ik zoveel extra werken als nodig is en meer.<br>
-
-						</p>
-
-					<h2>talen</h2>
-					<p>
-						ik spreek Engels en Nederlands, een heel klein beetje Duits en ik ben momenteel Spaans aan het leren. De programmeer talen die ik ken zijn HTML en CSS, en ik ben momenteel JavaScript en PHP aan het leren.
-					</p>
-				</p>
-
-			</section>
+				<img src="mediator.jpg">
+				<img src="J-Bawse.jpg">
 
 			</body>
 	</html>
